Basic Cleanup for Scout-App 2

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,11 @@
 /* Colors */
-$background: #f5f5f5;
+$background: #F5F5F5;
 $text: #333;
-$text-inverse: #ccc;
-$link: #a00;
-$border: #ddd;
-$button: #59b200;
-$white: #fff;
+$text-inverse: #CCC;
+$link: #A00;
+$border: #DDD;
+$button: #59B200;
+$white: #FFF;
 $black: #000;
 
 @import "compass";
