--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -1,3 +1,5 @@
 // For the header, nav, and breadcrumbs that appear on every page.
 
-//header
+header
+    min-height: 300px
+    background-color: #444
