--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -1,5 +1,16 @@
 //.homepage
 
 main
-    min-height: 300px
+    min-height: 500px
     background-color: #FAA
+
+#downloads
+    a
+        display: inline-block
+        background: #F88
+        padding: 20px
+        color: #600
+        text-decoration: none
+        &:hover
+            background: #F66
+            color: #800
