--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -4,3 +4,14 @@
 footer
     min-height: 300px
     background-color: #FFF
+    div
+        display: inline-block
+        vertical-align: top
+    h3
+        font-size: 20px
+        margin: 10px 0px
+    a
+        display: block
+        padding: 0px 15px
+        color: #400
+        text-decoration: none
