Added new logo graphics (compressed)

--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -4,6 +4,9 @@ main
     min-height: 500px
     background-color: #FAA
 
+h1
+    font-family: 'Rubik One', sans-serif;
+
 #downloads
     a
         display: inline-block
