Updated gulp, added livereload

--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -4,8 +4,11 @@ main
     min-height: 500px
     background-color: #FAA
 
+img
+    max-width: 100%
+
 h1
-    font-family: 'Rubik One', sans-serif;
+    font-family: 'Rubik One', sans-serif
 
 #downloads
     a
