Added in basic content
This layout can be changed later.

--- a/_sass/_var.sass
+++ b/_sass/_var.sass
@@ -1,6 +1,8 @@
 
 // Supplies mixins and variables that other .scss files can call
 
+$logo-font: 'Rubik One', sans-serif
+
 @mixin bmp0
     border: 0px
     margin: 0px
