--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -2,12 +2,20 @@
 // For the Footer that appears at the bottom of every page
 
 footer
-    min-height: 300px
+    max-width: 850px
+    margin: 0px auto
     background-color: #FFF
+    text-align: center
     div
         display: inline-block
+        width: 220px
+        margin: 0px 0px 20px 0px
+        text-align: left
         vertical-align: top
+        &:last-of-type
+            margin-bottom: 50px
     h3
+        font-family: $logo-font
         font-size: 20px
         margin: 10px 0px
     a
