Updated page layout, styles, and content

--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -4,6 +4,7 @@
 footer
     max-width: 850px
     margin: 0px auto
+    padding: 10px 0px 0px 0px
     background-color: #FFF
     text-align: center
     div
