--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -5,14 +5,14 @@
     width: 14px
 
 ::-webkit-scrollbar-button
-    background: #F00
+    background: $ketchup
     height: 18px
 
 ::-webkit-scrollbar-track-piece
     background-color: #444
 
 ::-webkit-scrollbar-thumb
-    background: #F00
+    background: $ketchup
 
 *,
 *:before,
@@ -33,3 +33,9 @@ img
     max-width: 1403px
     margin: 0 auto
     background-color: #FFF
+
+.half
+    display: inline-block
+    width: 50%
+    text-align: center
+    vertical-align: top
