--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -1,8 +1,11 @@
 // For the header, nav, and breadcrumbs that appear on every page.
 
 header
-    min-height: 150px
-    background-color: #444
-    padding-bottom: 5px
-    h1
-        margin: 20px 0px 0px 0px
+    height: 100%
+    background: $mustard
+    padding: 0px 0px 5px 0px
+    text-align: center
+    img
+        position: relative
+        top: 38%
+        padding: 0px 10px
