--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -1,22 +1,41 @@
 //.homepage
 
 main
-    min-height: 500px
-    background-color: #FAA
+    background: #F5D4D4
 
 img
     max-width: 100%
 
 h1
+    margin: 70px 0px 30px 0px
+    color: $brownSugarKetchup
     font-family: $logo-font
+    font-size: 40px
+
+iframe
+    +bmp0
+    width: 100%
+    height: 400px
+
+section
+    font-size: 0px
+
+.video-container
+    background-color: #000
 
 #downloads
+    margin: 0px auto
+    padding-bottom: 20px
     a
+        width: 250px
         display: inline-block
-        background: #F88
+        background: $mustard
+        margin: 10px 10px 10px 10px
         padding: 20px
-        color: #600
+        color: $ketchup
+        font-size: 18px
+        font-weight: bold
         text-decoration: none
         &:hover
-            background: #F66
-            color: #800
+            background: $puppySpot
+            color: $puppyBase
