--- a/_sass/_var.sass
+++ b/_sass/_var.sass
@@ -2,6 +2,11 @@
 // Supplies mixins and variables that other .scss files can call
 
 $logo-font: 'Rubik One', sans-serif
+$mustard: #FFD255
+$ketchup: #D72A2A
+$brownSugarKetchup: #821919
+$puppyBase: #EBE2DB;
+$puppySpot: #DD8D4B;
 
 @mixin bmp0
     border: 0px
