--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -23,4 +23,5 @@ footer
         display: block
         padding: 0px 15px
         color: #400
+        line-height: 23px
         text-decoration: none
