--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -21,7 +21,8 @@ footer
         margin: 10px 0px
     a
         display: block
-        padding: 0px 15px
+        padding: 0px 15px 7px 15px
         color: #400
-        line-height: 23px
         text-decoration: none
+        &:hover
+            color: $ketchup
