--- a/_styles/style.css
+++ b/_styles/style.css
@@ -416,10 +416,13 @@ footer h3 {
 
 footer a {
   display: block;
-  padding: 0px 15px;
+  padding: 0px 15px 7px 15px;
   color: #400;
-  line-height: 23px;
   text-decoration: none;
+}
+
+footer a:hover {
+  color: #D72A2A;
 }
 
 @media screen and (max-width: 1093px) {
