Quick style updates

--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -1,18 +1,18 @@
 
 // The main document, every page on the site refers to this basic document
 
-::-webkit-scrollbar
-    width: 14px
-
-::-webkit-scrollbar-button
-    background: $ketchup
-    height: 18px
-
-::-webkit-scrollbar-track-piece
-    background-color: #444
-
-::-webkit-scrollbar-thumb
-    background: $ketchup
+//::-webkit-scrollbar
+//    width: 14px
+//
+//::-webkit-scrollbar-button
+//    background: $ketchup
+//    height: 18px
+//
+//::-webkit-scrollbar-track-piece
+//    background-color: #444
+//
+//::-webkit-scrollbar-thumb
+//    background: $ketchup
 
 *,
 *:before,
