Added rough draft of Quotes section

--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -16,7 +16,7 @@ footer
         &:last-of-type
             margin-bottom: 50px
     h3
-        font-family: $logo-font
+        font-family: $logoFont
         font-size: 20px
         margin: 10px 0px
     a
