--- a/_sass/_var.sass
+++ b/_sass/_var.sass
@@ -1,7 +1,8 @@
 
 // Supplies mixins and variables that other .scss files can call
 
-$logo-font: 'Rubik One', sans-serif
+$logoFont: 'Rubik One', sans-serif
+$secondaryFont: Montserrat, sans-serif
 $mustard: #FFD255
 $ketchup: #D72A2A
 $brownSugarKetchup: #821919
