--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -2,6 +2,7 @@
 
 //Webfonts
 @import url(https://fonts.googleapis.com/css?family=Rubik+One);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 //Stuff that goes at the start
 @import "_var.sass";           // Sass Variables and Mixins - Does not effect page, but other Sass files reference this file.
