--- a/_styles/style.css
+++ b/_styles/style.css
@@ -1,4 +1,6 @@
+@charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Rubik+One);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -389,6 +391,52 @@ section {
 #downloads a:hover {
   background: #DD8D4B;
   color: #EBE2DB;
+}
+
+#quotes {
+  background: #EBE2DB;
+  padding: 30px 0px 40px;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+}
+
+#quotes h3 {
+  padding: 10px 0px 10px 0px;
+  color: #DD8D4B;
+  font-size: 25px;
+  font-weight: 300;
+}
+
+#quotes h3,
+#quotes ul {
+  max-width: 960px;
+  margin: 0px auto;
+}
+
+#quotes li {
+  margin: 0px 0px 0px 60px;
+  font-size: 20px;
+  line-height: 24px;
+  list-style-type: disc;
+}
+
+#quotes q {
+  font-size: 15px;
+  font-style: italic;
+  font-weight: 400;
+  opacity: 0.75;
+}
+
+#quotes q:before, #quotes q:after {
+  font-style: normal;
+}
+
+#quotes q:before {
+  content: '‟';
+}
+
+#quotes q:after {
+  content: '”';
 }
 
 footer {
