--- a/_sass/_mediaqueries.sass
+++ b/_sass/_mediaqueries.sass
@@ -6,3 +6,8 @@
         max-width: 80%
     .half
         width: 100%
+    section
+        table
+            font-size: 22px * 0.8
+        th
+            font-size: 30px * 0.8
