--- a/_sass/_var.sass
+++ b/_sass/_var.sass
@@ -22,9 +22,16 @@ $puppySpot: #DD8D4B;
     -ms-user-select: none
     user-select: none
 
-@mixin transform($x, $y, $z)
+@mixin translate3d($x, $y, $z)
     -webkit-transform: translate3d($x, $y, $z)
     -moz-transform: translate3d($x, $y, $z)
     -ms-transform: translate3d($x, $y, $z)
     -o-transform: translate3d($x, $y, $z)
     transform: translate3d($x, $y, $z)
+
+@mixin translate($x, $y)
+    -webkit-transform: translate($x, $y)
+    -moz-transform: translate($x, $y)
+    -ms-transform: translate($x, $y)
+    -o-transform: translate($x, $y)
+    transform: translate($x, $y)
