--- a/_sass/_ven.slick-theme.sass
+++ b/_sass/_ven.slick-theme.sass
@@ -8,7 +8,8 @@
 $slick-font-path: "/_fonts/" !default
 $slick-loader-path: "/_img/" !default
 $slick-font-family: "slick" !default
-$slick-arrow-color: #FFF !default
+$slick-arrow-color: #000 !default
+$slick-arrow-size: 33px !default
 $slick-dot-color: #000 !default
 $slick-dot-color-active: $slick-dot-color !default
 $slick-prev-character: "←" !default
@@ -50,11 +51,12 @@ $slick-opacity-not-active: 0.25 !default
 
 .slick-prev,
 .slick-next
+    +translate(0, -50%)
     position: absolute
     top: 50%
     display: block
-    height: 20px
-    width: 20px
+    height: $slick-arrow-size
+    width: $slick-arrow-size
     background: transparent
     border: none
     padding: 0px
@@ -62,10 +64,8 @@ $slick-opacity-not-active: 0.25 !default
     color: transparent
     line-height: 0px
     cursor: pointer
-    -webkit-transform: translate(0, -50%)
-    -ms-transform: translate(0, -50%)
-    transform: translate(0, -50%)
     outline: none
+    z-index: 1000
     &:hover,
     &:focus
         background: transparent
@@ -78,26 +78,26 @@ $slick-opacity-not-active: 0.25 !default
     &:before
         color: $slick-arrow-color
         font-family: $slick-font-family
-        font-size: 20px
+        font-size: $slick-arrow-size
         line-height: 1
         opacity: $slick-opacity-default
         -webkit-font-smoothing: antialiased
         -moz-osx-font-smoothing: grayscale
 
 .slick-prev
-    left: -25px
+    left: 0px
     [dir="rtl"] &
         left: auto
-        right: -25px
+        right: 0px
     &:before
         content: $slick-prev-character
         [dir="rtl"] &
             content: $slick-next-character
 
 .slick-next
-    right: -25px
+    right: 0px
     [dir="rtl"] &
-        left: -25px
+        left: 0px
         right: auto
     &:before
         content: $slick-next-character
@@ -107,14 +107,15 @@ $slick-opacity-not-active: 0.25 !default
 /* Dots */
 
 .slick-dotted.slick-slider
-    margin-bottom: 30px
+    margin-bottom: 0px
 
 .slick-dots
-    position: absolute
-    bottom: -25px
+    position: relative
+    bottom: 75px
     display: block
-    width: 100%
-    margin: 0px
+    width: 70%
+    height: 0px
+    margin: 0px auto
     padding: 0px
     list-style: none
     text-align: center
@@ -155,9 +156,23 @@ $slick-opacity-not-active: 0.25 !default
                 font-size: $slick-dot-size
                 line-height: 20px
                 text-align: center
+                text-shadow: 0px 0px 0px #FFF, 0px 0px 0px #FFF
                 opacity: $slick-opacity-not-active
                 -webkit-font-smoothing: antialiased
                 -moz-osx-font-smoothing: grayscale
         &.slick-active button:before
             color: $slick-dot-color-active
             opacity: $slick-opacity-default
+
+.slick
+    background: #FFF
+    div
+        outline: none
+    p
+        font-size: 14px
+
+.slick-slide
+    transition: 1s ease all
+    opacity: 0.75
+    &.slick-current
+        opacity: 1.0
