--- a/_sass/_ven.slick.sass
+++ b/_sass/_ven.slick.sass
@@ -23,7 +23,7 @@
 
 .slick-slider .slick-track,
 .slick-slider .slick-list
-    +transform(0, 0, 0)
+    +translate3d(0, 0, 0)
 
 .slick-track
     position: relative
