--- a/_styles/style.css
+++ b/_styles/style.css
@@ -394,11 +394,16 @@ th {
 /* Arrows */
 .slick-prev,
 .slick-next {
+  -webkit-transform: translate(0, -50%);
+  -moz-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  -o-transform: translate(0, -50%);
+  transform: translate(0, -50%);
   position: absolute;
   top: 50%;
   display: block;
-  height: 20px;
-  width: 20px;
+  height: 33px;
+  width: 33px;
   background: transparent;
   border: none;
   padding: 0px;
@@ -406,10 +411,8 @@ th {
   color: transparent;
   line-height: 0px;
   cursor: pointer;
-  -webkit-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  transform: translate(0, -50%);
   outline: none;
+  z-index: 1000;
 }
 
 .slick-prev:hover, .slick-prev:focus,
@@ -433,9 +436,9 @@ th {
 
 .slick-prev:before,
 .slick-next:before {
-  color: #FFF;
+  color: #000;
   font-family: "slick";
-  font-size: 20px;
+  font-size: 33px;
   line-height: 1;
   opacity: 0.75;
   -webkit-font-smoothing: antialiased;
@@ -443,12 +446,12 @@ th {
 }
 
 .slick-prev {
-  left: -25px;
+  left: 0px;
 }
 
 [dir="rtl"] .slick-prev {
   left: auto;
-  right: -25px;
+  right: 0px;
 }
 
 .slick-prev:before {
@@ -460,11 +463,11 @@ th {
 }
 
 .slick-next {
-  right: -25px;
+  right: 0px;
 }
 
 [dir="rtl"] .slick-next {
-  left: -25px;
+  left: 0px;
   right: auto;
 }
 
@@ -478,15 +481,16 @@ th {
 
 /* Dots */
 .slick-dotted.slick-slider {
-  margin-bottom: 30px;
+  margin-bottom: 0px;
 }
 
 .slick-dots {
-  position: absolute;
-  bottom: -25px;
+  position: relative;
+  bottom: 75px;
   display: block;
-  width: 100%;
-  margin: 0px;
+  width: 70%;
+  height: 0px;
+  margin: 0px auto;
   padding: 0px;
   list-style: none;
   text-align: center;
@@ -536,6 +540,7 @@ th {
   font-size: 6px;
   line-height: 20px;
   text-align: center;
+  text-shadow: 0px 0px 0px #FFF, 0px 0px 0px #FFF;
   opacity: 0.25;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -544,6 +549,27 @@ th {
 .slick-dots li.slick-active button:before {
   color: #000;
   opacity: 0.75;
+}
+
+.slick {
+  background: #FFF;
+}
+
+.slick div {
+  outline: none;
+}
+
+.slick p {
+  font-size: 14px;
+}
+
+.slick-slide {
+  transition: 1s ease all;
+  opacity: 0.75;
+}
+
+.slick-slide.slick-current {
+  opacity: 1.0;
 }
 
 *,
