--- a/_sass/_ven.slick-theme.sass
+++ b/_sass/_ven.slick-theme.sass
@@ -168,8 +168,12 @@ $slick-opacity-not-active: 0.25 !default
     background: #FFF
     div
         outline: none
+    img
+        max-height: 300px
+        margin: 0px auto
     p
         font-size: 14px
+        padding-bottom: 20px
 
 .slick-slide
     transition: 1s ease all
