--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -21,7 +21,8 @@
 
 //Stuff for specific sections
 @import "_downloads.sass";       // Download buttons and Getting started video
-@import "_whatsnew.sass";        // The scou comparrison table
+@import "_whatsnew.sass";        // The version comparrison table
+@import "_screenshots.sass";     // Screenshots of the app
 @import "_quotes.sass";          // Quotes about the app
 
 //Stuff that goes at the end
