--- a/_sass/_ven.slick-theme.sass
+++ b/_sass/_ven.slick-theme.sass
@@ -5,8 +5,8 @@
 // "\2192" outputs ascii character "→"
 // "\2022" outputs ascii character "•"
 
-$slick-font-path: "/_fonts/" !default
-$slick-loader-path: "/_img/" !default
+$slick-font-path: "../_fonts/" !default
+$slick-loader-path: "../_img/" !default
 $slick-font-family: "slick" !default
 $slick-arrow-color: #000 !default
 $slick-arrow-size: 33px !default
