--- a/_styles/style.css
+++ b/_styles/style.css
@@ -379,14 +379,14 @@ th {
 
 /* Slider */
 .slick-loading .slick-list {
-  background: #fff url("/_img/ajax-loader.gif") center center no-repeat;
+  background: #fff url("../_img/ajax-loader.gif") center center no-repeat;
 }
 
 /* Icons */
 @font-face {
   font-family: "slick";
-  src: url("/_fonts/slick.eot");
-  src: url("/_fonts/slick.eot?#iefix") format("embedded-opentype"), url("/_fonts/slick.woff") format("woff"), url("/_fonts/slick.ttf") format("truetype"), url("/_fonts/slick.svg#slick") format("svg");
+  src: url("../_fonts/slick.eot");
+  src: url("../_fonts/slick.eot?#iefix") format("embedded-opentype"), url("../_fonts/slick.woff") format("woff"), url("../_fonts/slick.ttf") format("truetype"), url("../_fonts/slick.svg#slick") format("svg");
   font-weight: normal;
   font-style: normal;
 }
