Basic screenshot abstraction and icons interaction

--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -39,3 +39,19 @@ img
     width: 50%
     text-align: center
     vertical-align: top
+
+.bg
+    &white
+        background: #FFF
+    &black
+        background: #000
+    &puppybase
+        background: $puppyBase
+    &puppyspot
+        background: $puppySpot
+    &ketchup
+        background: $ketchup
+    &mustard
+        background: $mustard
+    &brownsugarketchup
+        background: $brownSugarKetchup
