--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -1,7 +1,6 @@
 //.homepage
 
-main
-    background: $brownSugarKetchup
+//main
 
 img
     max-width: 100%
@@ -10,14 +9,6 @@ h1,
 h3
     font-family: $logoFont
     color: $mustard
-
-h1
-    margin: 70px 0px 15px 0px
-    font-size: 40px
-
-h3
-    margin: 15px auto 10px auto
-    font-size: 20px
 
 hr
     width: 80%
