--- a/_sass/_var.sass
+++ b/_sass/_var.sass
@@ -6,8 +6,8 @@ $secondaryFont: Montserrat, sans-serif
 $mustard: #FFD255
 $ketchup: #D72A2A
 $brownSugarKetchup: #821919
-$puppyBase: #EBE2DB;
-$puppySpot: #DD8D4B;
+$puppyBase: #EBE2DB
+$puppySpot: #DD8D4B
 
 @mixin bmp0
     border: 0px
