--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -24,6 +24,7 @@
 @import "_whatsnew.sass";        // The version comparrison table
 @import "_screenshots.sass";     // Screenshots of the app
 @import "_quotes.sass";          // Quotes about the app
+@import "_contributors.sass";    // All the little helpers
 
 //Stuff that goes at the end
 @import "_mediaqueries.sass";    // Adjusts the CSS of elements depending on browser or device resolution. Adaptive Web Design.
