Styled contributors section

--- a/_sass/_var.sass
+++ b/_sass/_var.sass
@@ -8,6 +8,7 @@ $ketchup: #D72A2A
 $brownSugarKetchup: #821919
 $puppyBase: #EBE2DB
 $puppySpot: #DD8D4B
+$standardTextSize: 18px
 
 @mixin bmp0
     border: 0px
