--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -25,6 +25,7 @@
 @import "_screenshots.sass";     // Screenshots of the app
 @import "_quotes.sass";          // Quotes about the app
 @import "_contributors.sass";    // All the little helpers
+@import "_cultures.sass";        //
 
 //Stuff that goes at the end
 @import "_mediaqueries.sass";    // Adjusts the CSS of elements depending on browser or device resolution. Adaptive Web Design.
