--- a/_sass/_screenshots.sass
+++ b/_sass/_screenshots.sass
@@ -1,4 +1,5 @@
-#screenshots
+#screenshots,
+#cultures
     [data-os]
         cursor: pointer
     .half
@@ -6,3 +7,5 @@
     p
         width: 90%
         margin: 50px auto 50px
+    .slick p
+        margin: 0px auto
