--- a/_sass/_cultures.sass
+++ b/_sass/_cultures.sass
@@ -1,8 +1,3 @@
-#cultures
-    [data-os]
-        cursor: pointer
-    .half
-        font-size: 16px
-    p
-        width: 90%
-        margin: 50px auto 50px
+//See _screenshots.sass for shared styles
+
+//#cultures
