Add logos to tech section, Update styles

--- a/_sass/_mediaqueries.sass
+++ b/_sass/_mediaqueries.sass
@@ -13,3 +13,7 @@
             font-size: 30px * 0.8
     .slick img
         max-height: 300px
+
+@media screen and (max-width: 700px)
+    .thirds
+        width: 100%
