--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -25,7 +25,9 @@
 @import "_screenshots.sass";     // Screenshots of the app
 @import "_quotes.sass";          // Quotes about the app
 @import "_contributors.sass";    // All the little helpers
+@import "_minreqs.sass";         //
 @import "_cultures.sass";        //
+@import "_technology.sass";      //
 
 //Stuff that goes at the end
 @import "_mediaqueries.sass";    // Adjusts the CSS of elements depending on browser or device resolution. Adaptive Web Design.
