--- a/_sass/_minreqs.sass
+++ b/_sass/_minreqs.sass
@@ -2,6 +2,9 @@
     padding: 30px 0px
     h4
         color: #FFF
-    li
+    td
         font-family: $secondaryFont
+        font-weight: normal
         line-height: 24px
+    strong
+        font-weight: bold
