--- a/_sass/_cultures.sass
+++ b/_sass/_cultures.sass
@@ -1,3 +1,14 @@
 //See _screenshots.sass for shared styles
 
 //#cultures
+
+#translation_instructions
+    width: 90%
+    margin: 0px auto
+    text-align: left
+    h4
+        margin: 0px 0px 10px 0px
+    li
+        list-style-type: decimal
+        margin: 0px 0px 0px 30px
+        line-height: 24px
