--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -24,10 +24,11 @@
 @import "_whatsnew.sass";        // The version comparrison table
 @import "_screenshots.sass";     // Screenshots of the app
 @import "_quotes.sass";          // Quotes about the app
+@import "_cultures.sass";        // Multi language support
 @import "_contributors.sass";    // All the little helpers
-@import "_minreqs.sass";         //
-@import "_cultures.sass";        //
-@import "_technology.sass";      //
+@import "_minreqs.sass";         // Minimum requirements to run Scout-App
+@import "_mixins.sass";          // Built in supported mixins
+@import "_technology.sass";      // Shoulders of giants
 
 //Stuff that goes at the end
 @import "_mediaqueries.sass";    // Adjusts the CSS of elements depending on browser or device resolution. Adaptive Web Design.
