--- a/_sass/_cultures.sass
+++ b/_sass/_cultures.sass
@@ -1,10 +1,24 @@
 //See _screenshots.sass for shared styles
 
-//#cultures
+#cultures
+    h3
+        margin: 35px 0px
+    p
+        margin: 30px 0px
+    .osselect
+        margin: 30px 0px 15px 0px
+        img
+            margin-bottom: 15px
+        small
+            display: block
+    a
+        color: $brownSugarKetchup
 
 #translation_instructions
-    width: 90%
+    width: 91%
+    border-radius: 6px
     margin: 0px auto
+    padding: 10px 10px
     text-align: left
     h4
         margin: 0px 0px 10px 0px
