Quick fix to themes section

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -28,6 +28,7 @@
 @import "_contributors.sass";    // All the little helpers
 @import "_minreqs.sass";         // Minimum requirements to run Scout-App
 @import "_mixins.sass";          // Built in supported mixins
+@import "_themes.sass";          // Themese screenshots
 @import "_technology.sass";      // Shoulders of giants
 
 //Stuff that goes at the end
