Mixins section done

--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -60,7 +60,17 @@ li,
 p
     font-size: $standardTextSize
 
+em
+    color: rgba(0, 0, 0, 0.7)
+    font-style: italic
 
+code
+    font-family: $consoleFont
+    font-size: 18px
+    font-weight: normal
+
+.hide
+    display: none
 
 .full,
 .half,
