--- a/_sass/_whatsnew.sass
+++ b/_sass/_whatsnew.sass
@@ -5,6 +5,8 @@
         padding: 60px 0px 40px 0px
         color: $puppySpot
         text-align: center
+    table
+        font-family: $secondaryFont
     thead
         color: $brownSugarKetchup
     th
