--- a/_sass/_mediaqueries.sass
+++ b/_sass/_mediaqueries.sass
@@ -6,6 +6,20 @@
         max-width: 80%
     .half
         width: 100%
+    #mixins
+        .half
+            width: 50%
+        .table
+            font-size: 22px * 0.8
+        .th
+            font-size: 30px * 0.8
+        .td
+            padding: 6px 4px 5px
+            line-height: 20px
+            a
+                font-size: 16px
+        code
+            font-size: 16px
     section
         table
             font-size: 22px * 0.8
