--- a/_sass/_var.sass
+++ b/_sass/_var.sass
@@ -2,7 +2,8 @@
 // Supplies mixins and variables that other .scss files can call
 
 $logoFont: 'Rubik One', sans-serif
-$secondaryFont: Montserrat, sans-serif
+$secondaryFont: 'Montserrat', sans-serif
+$consoleFont: 'Share Tech Mono', monospace
 $mustard: #FFD255
 $ketchup: #D72A2A
 $brownSugarKetchup: #821919
