--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,8 +1,9 @@
 @charset "utf-8";                // Character type for the stylesheet
 
 //Webfonts
-@import url(https://fonts.googleapis.com/css?family=Rubik+One);
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url('https://fonts.googleapis.com/css?family=Rubik+One');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+@import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono');
 
 //Stuff that goes at the start
 @import "_var.sass";             // Sass Variables and Mixins - Does not effect page, but other Sass files reference this file.
