--- a/_sass/_downloads.sass
+++ b/_sass/_downloads.sass
@@ -19,3 +19,15 @@
         &.selected
             border-color: $puppySpot
             box-shadow: 0px 0px 14px -2px $mustard
+
+#downloads-and-video
+    h1
+        margin-top: 30px
+    p a
+        display: inline-block
+        padding-bottom: 20px
+        color: $mustard
+        text-decoration: none
+        &:hover
+            color: $puppySpot
+            text-decoration: underline
