--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -5,8 +5,16 @@ header
     background: $mustard
     padding: 0px 0px 5px 0px
     text-align: center
+    table,
+    tbody,
+    tr,
+    td
+        +bmp0
+        width: 100%
+        height: 100%
+        text-align: center
+        vertical-align: middle
     img
-        position: relative
-        top: 38%
         max-width: 84%
+        max-height: 100%
         padding: 0px 10px
