--- a/_styles/style.css
+++ b/_styles/style.css
@@ -736,10 +736,22 @@ header {
   text-align: center;
 }
 
+header table,
+header tbody,
+header tr,
+header td {
+  border: 0px;
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  vertical-align: middle;
+}
+
 header img {
-  position: relative;
-  top: 38%;
   max-width: 84%;
+  max-height: 100%;
   padding: 0px 10px;
 }
 
@@ -1233,6 +1245,10 @@ footer a:hover {
 #technology img {
   max-height: 128px;
   margin: 20px auto;
+}
+
+#technology .node-sass {
+  max-width: 112px;
 }
 
 @media screen and (max-width: 1093px) {
