--- a/_sass/_cultures.sass
+++ b/_sass/_cultures.sass
@@ -4,7 +4,7 @@
     h3
         margin: 35px 0px
     p
-        margin: 30px 0px
+        margin: 30px auto
     .osselect
         margin: 30px 0px 15px 0px
         img
