--- a/_sass/_mixins.sass
+++ b/_sass/_mixins.sass
@@ -28,8 +28,9 @@
         border-bottom: 2px solid #000
         border-color: $brownSugarKetchup
         padding-bottom: 8px
+        font-family: "Rubik One", sans-serif
         font-size: 30px
-        font-weight: bold
+        font-weight: 500
         vertical-align: bottom
     .tbody .tr:first-of-type .td
         padding-top: 11px
