--- a/_sass/_minreqs.sass
+++ b/_sass/_minreqs.sass
@@ -4,7 +4,7 @@
         padding: 0px 0px 20px 0px
         color: #FFF
     table
-        min-height: 185px
+        height: 185px
         font-family: $secondaryFont
     th
         +bmp0
