--- a/_sass/_themes.sass
+++ b/_sass/_themes.sass
@@ -2,7 +2,7 @@
 
 #themes
     p
-        margin: 30px 0px
+        margin: 30px auto
     .osselect
         margin: 30px 0px 15px 0px
         img
