--- a/_sass/_quotes.sass
+++ b/_sass/_quotes.sass
@@ -1,12 +1,13 @@
 #quotes
     padding: 30px 0px 40px
-    font-family: $secondaryFont
     font-weight: 700
+    h1
+        text-align: center
     h3
         padding: 10px 0px 10px 0px
-        color: $puppySpot
-        font-size: 25px
+        font-size: 22px
         font-weight: 300
+        font-family: $secondaryFont
     h3,
     ul
         max-width: 960px
@@ -25,6 +26,6 @@
         &:after
             font-style: normal
         &:before
-            content: '‟'
+            content: "‟"
         &:after
-            content: '”'
+            content: "”"
