--- a/_styles/style.css
+++ b/_styles/style.css
@@ -961,15 +961,18 @@ footer a:hover {
 
 #quotes {
   padding: 30px 0px 40px;
-  font-family: "Montserrat", sans-serif;
   font-weight: 700;
+}
+
+#quotes h1 {
+  text-align: center;
 }
 
 #quotes h3 {
   padding: 10px 0px 10px 0px;
-  color: #DD8D4B;
-  font-size: 25px;
+  font-size: 22px;
   font-weight: 300;
+  font-family: "Montserrat", sans-serif;
 }
 
 #quotes h3,
@@ -997,11 +1000,11 @@ footer a:hover {
 }
 
 #quotes q:before {
-  content: '‟';
+  content: "‟";
 }
 
 #quotes q:after {
-  content: '”';
+  content: "”";
 }
 
 #cultures h3 {
